# f-actor

./: .gitignore  LOCAL_SETUP.md  README.md  pyproject.toml
confs/: example_dialogue.json
docs/: oov_experiment.md  vocab_table.md
eval/: judge_dialogues.py
eval/human_eval_llm_judge/: human_annotations_from_pearmut.json
eval/human_eval_llm_judge/pearmut/: README.md  campaign.json
scripts/analysis/: analyze_oov.py  behavior_sd_vocab.tsv  build_behavior_sd_vocab.py  codec_roundtrip.py  explore_vocab.py  generate_oov_configs.py  oov_words.txt  subword_coverage.py  transcribe_oov.py
training/: device_utils.py  inference.py  inference_example.py  model.py  modeling_dsu.py
training/arguments/: parse_arguments.py
training/inference_audio/: mimi_decode.py
