[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "full-duplex"
version = "0.1.0"
requires-python = ">=3.10"

# Core dependencies: enough to run inference (dialogue generation + codec
# decoding) on CUDA, Apple Silicon (MPS), or CPU.
dependencies = [
    "torch",
    # DSULlama subclasses LlamaForCausalLM internals; untested on transformers 5.x
    "transformers<5",
    "datasets",
    "safetensors",
    "sentencepiece",
    "accelerate",
    "evaluate",
    "rouge_score",
    "soundfile",
    "nemo-toolkit[tts]",
    "tqdm",
]

[project.optional-dependencies]
# Training / data preprocessing (Linux + CUDA assumed)
train = [
    "deepspeed; sys_platform == 'linux'",
    "wandb",
    "torchcodec",
    "librosa",
    "pre-commit",
]
# Paper evaluation metrics (eval/ scripts; some still assume CUDA)
eval = [
    "jiwer",
    "silero-vad",
    "matplotlib",
    "hydra-core",
]

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "build", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "build", "dist*", "playground*", "scripts*", "tests*"]

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
profile = "black"
